--- a/Form1.resx
+++ b/Form1.resx
@@ -130,4 +130,7 @@
         LJc3M+Zm+nQd/uJxmZq+RyVx22q8zFDN1A8DWoXn5alZLY/XMSHwBTEfKuBkGPq1AAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>141, 17</value>
+  </metadata>
 </root>
